Add QR Scan for cashtag

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:allowBackup="true"
@@ -52,10 +53,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".GroupListActivity" />
         </activity>
-        <activity
-            android:name=".GroupHistoryActivity"
-            android:label="@string/title_activity_group_history"
-            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".GroupOverviewActivity"
             android:label="@string/title_activity_group_overview"
