--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -69,6 +69,13 @@
                 android:name="android.support.PARENT_ACIVITY"
                 android:value=".GroupOverviewActivity" />
         </activity>
+        <activity
+            android:name="com.ivanjt.cashtroops.CaptureActivityPortrait"
+            android:screenOrientation="portrait"
+            android:stateNotNeeded="true"
+            android:theme="@style/zxing_CaptureTheme"
+            android:windowSoftInputMode="stateAlwaysHidden">
+    </activity>
     </application>
 
 </manifest>
