--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,7 +61,10 @@
                 android:name="android.support.PARENT_ACIVITY"
                 android:value=".GroupListActivity" />
         </activity>
-        <activity android:name=".GroupHistoryActivity" />
+        <activity
+            android:name=".GroupHistoryActivity"
+            android:label="@string/title_activity_group_history"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".EventListActivity"
             android:parentActivityName=".GroupOverviewActivity">
